Fix authenticator-option-label alignment using flexbox
authenticator-option-label was aligned using padding-top rather than
flexbox. This fix implements flexbox.

Below are replication steps, copied from the linked issue:

1. Launch Chrome and right click inspect
2. Click on More tools select WebAuthn
3. Check the box of Enable Virtual Authenticator
4. Notice the labels are not aligned with the checkboxes

Fixed: 40066880
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5309155
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/webauthn/webauthnPane.css
+++ b/front_end/panels/webauthn/webauthnPane.css
@@ -113,6 +113,7 @@
 .authenticator-option {
   display: flex;
   padding-bottom: 10px;
+  align-items: center;
   margin: auto;
 }
 
@@ -120,7 +121,7 @@
   text-align: right;
   width: 200px;
   display: inline-block;
-  padding: 5px 10px 0 0;
+  padding: 0 10px 0 0;
 }
 
 td .text-button {
